--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,34 +1,14 @@
 trigger:
-  - greenkeeper/* # enable CI to run on greenkeeper branches
-  - master # run build for every merge to master
-pr:
-  - dev* # kick off for pr targeting dev or prefix dev
-  - master # trigger build for pr targeting master
+  - refs/tags/* # trigger on any tag
+pr: none # disable CI build for PR
 
 jobs:
 - job: Linux
+  condition: succeeded()
   pool:
     vmImage: ubuntu-16.04
   timeoutInMinutes: 60 # how long to run the job before automatically cancelling
   steps:
   - checkout: self # self represents the repo where the initial Pipelines YAML file was found
     fetchDepth: 1  # the depth of commits to ask Git to fetch
-  - template: azure-pipelines/linux/continuous-build-linux.yml
-
-- job: MacOS
-  pool:
-    vmImage: macOS-10.13
-  timeoutInMinutes: 60 # how long to run the job before automatically cancelling
-  steps:
-  - checkout: self # self represents the repo where the initial Pipelines YAML file was found
-    fetchDepth: 1  # the depth of commits to ask Git to fetch
-  - template: azure-pipelines/mac/continuous-build-mac.yml
-
-- job: Windows
-  pool:
-    vmImage: win1803
-  timeoutInMinutes: 60 # how long to run the job before automatically cancelling
-  steps:
-  - checkout: self # self represents the repo where the initial Pipelines YAML file was found
-    fetchDepth: 1  # the depth of commits to ask Git to fetch
-  - template: azure-pipelines/windows/continuous-build-windows.yml
+  - template: azure-pipelines/linux/artifact-build-linux.yml
